--- a/template/package.json
+++ b/template/package.json
@@ -21,7 +21,7 @@
     "eslint": "^8",
     "typescript": "^5",
     "vitest": "^0.34.6",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*"
   }
 }
