--- a/packages/elba-api/package.json
+++ b/packages/elba-api/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "elba-msw",
+  "name": "elba-api",
   "version": "0.1.0",
   "private": true,
   "main": "src/index.ts",
   "scripts": {
-    "lint": "eslint src/**.ts"
+    "lint": "eslint server.ts src/**.ts",
+    "lint:fix": "pnpm lint --fix",
+    "start": "tsx watch server.ts"
   },
   "dependencies": {
-    "elba-api": "workspace:*",
     "elba-schema": "workspace:*",
-    "typescript": "^5",
-    "msw": "^2.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.2.3",
     "eslint": "^8",
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "hono": "^3.10.2",
+    "tsconfig": "workspace:*",
+    "tsx": "^3.12.2"
   }
 }
