--- a/template/package.json
+++ b/template/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "elba-sdk": "workspace:*",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
