--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "elba-sdk": "workspace:*",
+    "@elba-security/sdk": "workspace:*",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
