chore: enforce drizzle usage (#37)
## Description

- enforce `drizzle` usage in `CONTRIBUTION.md`
- configure `drizzle` in the template
- configure `vitest` to works along the db in the template
- update env. variables template files
- add documentation for tests in `CONTRIBUTION.md`
- bump template vitest version to `beta-5` (required for running test in
a single thread properly).
- add `docker-compose.yml` to setup a local database and proxy
- add script for database migration
- add script to run the tests with a database (working on pipeline)

## Checklist:

Before you create this PR, confirm all the requirements listed below by
checking the checkboxes like this (`[x]`).

- [ ] I have performed a self-review of my own code.
- [X] I have commented my code, particularly in hard-to-understand
areas.
- [X] I have added tests to cover the new feature or fixes.

--- a/template/package.json
+++ b/template/package.json
@@ -7,25 +7,40 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "sh ./scripts/run-test.sh",
+    "test:watch": "sh ./scripts/run-test.sh -w",
+    "test:database:up": "docker-compose -p integration-test --env-file=.env.test up -d",
+    "test:database:down": "docker-compose -p integration-test down",
+    "test:database:migrate": "node ./scripts/migrate.js .env.test",
+    "database:up": "docker-compose -p integration --env-file=.env.local up -d",
+    "database:down": "docker-compose -p integration down",
+    "database:migrate": "node ./scripts/migrate.js .env.local",
+    "database:generate": "npx drizzle-kit generate:pg --schema=./src/database/schema.ts"
   },
   "dependencies": {
     "@elba-security/sdk": "workspace:*",
+    "@neondatabase/serverless": "^0.6.0",
+    "@vercel/postgres": "^0.5.1",
+    "drizzle-orm": "^0.28.6",
+    "msw": "^2.0.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@elba-security/msw-utils": "workspace:*",
     "@edge-runtime/vm": "^3.1.7",
     "@next/eslint-plugin-next": "^14.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "dotenv": "^16.3.1",
-    "eslint": "^8",
-    "typescript": "^5",
-    "vitest": "^0.34.6",
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "eslint": "^8",
+    "msw": "^2.0.1",
+    "postgres": "^3.4.3",
+    "tsconfig": "workspace:*",
+    "typescript": "^5",
+    "vitest": "^1.0.0-beta.5"
   }
 }
