feat(template): enforce inngest usage (#48)
## Description

- rename `@elba-security/msw-utils` to `@elba-security/test-utils`
- add inngest mock util to `test-utils`
- add `inngest` to required tools in `CONTRIBUTING.md`
- configure `inngest` in **template**
- configure `zod` validation of env variables in **template**
- add an example flow of **authentication** & **users sync** fully
tested in **template**
- add `dev:ingest` script in in **template**
- update `database:migrate` script to avoid using npx in **template**

## Additional notes

All the example test are fully functionals.

## Checklist:

Before you create this PR, confirm all the requirements listed below by
checking the checkboxes like this (`[x]`).

- [ ] I have performed a self-review of my own code.
- [ ] I have commented my code, particularly in hard-to-understand
areas.
- [X] I have added tests to cover the new feature or fixes.

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,10 +11,11 @@
     "@elba-security/schemas": "workspace:*"
   },
   "devDependencies": {
-    "@elba-security/msw-utils": "workspace:*",
+    "@elba-security/test-utils": "workspace:*",
+    "@types/node": "^20.10.3",
     "eslint": "^8",
     "typescript": "^5",
-    "vitest": "^0.34.6",
+    "vitest": "^1.0.0",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "msw": "^2.0.1"
