--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -19,6 +19,6 @@ services:
       ALLOW_ADDR_REGEX: '.*'
       LOG_TRAFFIC: 'true'
     ports:
-      - '${POSTGRES_PROXY}:80'
+      - '${POSTGRES_PROXY_PORT}:80'
     depends_on:
       - postgres
