chore: small refactor and improvements to packages (#52)
## Description

We had started using the `@elba-security` namespace for all internal packages, but didn't migrate the config packages. In this PR we are refactoring the `tsconfig` and `eslint-config-custom` packages to be part of the `@elba-security` namespace. Also it features some additional tiny improvements.

## Checklist:

Before you create this PR, confirm all the requirements listed below by checking the checkboxes like this (`[x]`).

- [X] I have performed a self-review of my own code.
- [ ] I have commented my code, particularly in hard-to-understand areas.
- [ ] I have added tests to cover the new feature or fixes.

--- a/template/package.json
+++ b/template/package.json
@@ -32,7 +32,9 @@
   },
   "devDependencies": {
     "@edge-runtime/vm": "^3.1.7",
+    "@elba-security/eslint-config-custom": "workspace:*",
     "@elba-security/test-utils": "workspace:*",
+    "@elba-security/tsconfig": "workspace:*",
     "@next/eslint-plugin-next": "^14.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -40,11 +42,9 @@
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.20.6",
     "eslint": "^8",
-    "eslint-config-custom": "workspace:*",
     "inngest-cli": "^0.22.0",
     "msw": "^2.0.1",
     "postgres": "^3.4.3",
-    "tsconfig": "workspace:*",
     "typescript": "^5",
     "vitest": "^1.0.0"
   }
