--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -13,11 +13,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@elba-security/eslint-config-custom": "workspace:*",
+    "@elba-security/tsconfig": "workspace:*",
     "@hono/node-server": "^1.2.3",
     "eslint": "^8",
-    "eslint-config-custom": "workspace:*",
     "hono": "^3.10.2",
-    "tsconfig": "workspace:*",
     "tsx": "^3.12.2"
   }
 }
