--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -11,8 +11,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "@elba-security/eslint-config-custom": "workspace:*",
+    "@elba-security/tsconfig": "workspace:*",
+    "eslint": "^8"
   }
 }
