--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,13 +11,13 @@
     "@elba-security/schemas": "workspace:*"
   },
   "devDependencies": {
+    "@elba-security/eslint-config-custom": "workspace:*",
     "@elba-security/test-utils": "workspace:*",
+    "@elba-security/tsconfig": "workspace:*",
     "@types/node": "^20.10.3",
     "eslint": "^8",
+    "msw": "^2.0.1",
     "typescript": "^5",
-    "vitest": "^1.0.0",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
-    "msw": "^2.0.1"
+    "vitest": "^1.0.0"
   }
 }
