--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/base.json",
+  "extends": "@elba-security/tsconfig/base.json",
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
