--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,6 +11,7 @@
     "@elba-security/schemas": "workspace:*"
   },
   "devDependencies": {
+    "@edge-runtime/vm": "^3.1.7",
     "@elba-security/eslint-config-custom": "workspace:*",
     "@elba-security/test-utils": "workspace:*",
     "@elba-security/tsconfig": "workspace:*",
