chore: add husky pre commit hook (#63)
## Description

- add husky pre-commit that lint everything and check that commit don't
happens on staging branch
- fix lint commands of packages

## Additional Notes

N/A

## Checklist:

Before you create this PR, confirm all the requirements listed below by
checking the checkboxes like this (`[x]`).

- [X] I have performed a self-review of my own code.
- [ ] I have commented my code, particularly in hard-to-understand
areas.
- [ ] I have added tests to cover the new feature or fixes.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@elba-security/tsconfig": "workspace:*",
     "eslint": "^8.48.0",
+    "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "turbo": "latest"
   },
