--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "lint": "eslint src/**.ts",
+    "lint": "eslint src",
     "test": "vitest run"
   },
   "dependencies": {
