--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "src/index.ts",
   "scripts": {
-    "lint": "eslint src/**.ts"
+    "lint": "eslint src"
   },
   "dependencies": {
     "typescript": "^5",
