--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "scripts": {
     "lint": "eslint src",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:watch": "vitest -w"
   },
   "dependencies": {
-    "@elba-security/schemas": "workspace:*"
+    "@elba-security/schemas": "workspace:*",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@edge-runtime/vm": "^3.1.7",
@@ -19,6 +21,6 @@
     "eslint": "^8",
     "msw": "^2.0.1",
     "typescript": "^5",
-    "vitest": "^1.0.0"
+    "vitest": "1.1.1"
   }
 }
