--- a/template/.env.local.example
+++ b/template/.env.local.example
@@ -2,6 +2,7 @@ ELBA_SOURCE_ID="0442f541-45d2-487a-9e4b-de03ce4c559e"
 ELBA_API_KEY="abc123dfg456"
 ELBA_API_BASE_URL="https://foo.bar/api"
 ELBA_REDIRECT_URL="https://foo.bar"
+ELBA_WEBHOOK_SECRET="some-elbe-webhook-secret"
 POSTGRES_URL="postgres://postgre:postgre@localhost:5555/development"
 POSTGRES_HOST="0.0.0.0"
 POSTGRES_PORT="5555"
