--- a/template/package.json
+++ b/template/package.json
@@ -19,8 +19,12 @@
     "database:generate": "drizzle-kit generate:pg --schema=./src/database/schema.ts"
   },
   "dependencies": {
+    "@elba-security/config": "workspace:*",
+    "@elba-security/inngest": "workspace:*",
+    "@elba-security/logger": "workspace:*",
     "@elba-security/sdk": "workspace:*",
     "@neondatabase/serverless": "0.6.0",
+    "@sentry/nextjs": "^7.88.0",
     "@vercel/postgres": "0.5.1",
     "drizzle-orm": "^0.29.1",
     "inngest": "^3.6.2",
