fix(github): fix install and add logs (#79)
## Description

- tweak tsconfig to make error type unknown instead of any
- add permissive inngest peerDep in inngest package
- refactor github schema postgres field name
- add logger to github route & inngest function
- add logger to inngest function context mock

## Additional Notes

N/A

## Checklist:

Before you create this PR, confirm all the requirements listed below by
checking the checkboxes like this (`[x]`).

- [X] I have performed a self-review of my own code.
- [ ] I have commented my code, particularly in hard-to-understand
areas.
- [ ] I have added tests to cover the new feature or fixes.

--- a/apps/github/package.json
+++ b/apps/github/package.json
@@ -19,10 +19,14 @@
     "database:generate": "drizzle-kit generate:pg --schema=./src/database/schema.ts"
   },
   "dependencies": {
+    "@elba-security/config": "workspace:*",
+    "@elba-security/logger": "workspace:*",
+    "@elba-security/inngest": "workspace:*",
     "@elba-security/sdk": "workspace:*",
     "@octokit/app": "^14.0.2",
     "@octokit/request-error": "^5.0.1",
     "@octokit/webhooks-types": "^7.3.1",
+    "@sentry/nextjs": "^7.88.0",
     "@vercel/postgres": "^0.5.1",
     "drizzle-orm": "^0.29.1",
     "inngest": "^3.8.0",
