feat(github): add tpa sync (#84)
## Description

- add github tpa sync
- bump required inngest version in test-utils as type where conflicting

## Additional Notes

- [X] I have test the TPA sync on staging

## Checklist:

Before you create this PR, confirm all the requirements listed below by
checking the checkboxes like this (`[x]`).

- [ ] I have performed a self-review of my own code.
- [ ] I have commented my code, particularly in hard-to-understand
areas.
- [ ] I have added tests to cover the new feature or fixes.

--- a/apps/github/.env.test
+++ b/apps/github/.env.test
@@ -2,6 +2,7 @@ ELBA_API_BASE_URL="https://api.elba.io"
 ELBA_API_KEY="121212"
 ELBA_REDIRECT_URL="https://foo.elba.bar"
 ELBA_SOURCE_ID="e99870a8-8adb-449d-95f5-32e26a7b9b70"
+ELBA_WEBHOOK_SECRET="thisisthesecret"
 
 GITHUB_APP_INSTALL_URL="https://github.com/apps/local-elba/installations/new"
 GITHUB_APP_ID="121313"
@@ -19,5 +20,10 @@ USERS_SYNC_CRON="0 0 * * *"
 USERS_SYNC_BATCH_SIZE="5"
 USERS_SYNC_MAX_RETRY="3"
 MAX_CONCURRENT_USERS_SYNC="5"
+
+THIRD_PARTY_APPS_SYNC_CRON="0 0 * * *"
+THIRD_PARTY_APPS_SYNC_BATCH_SIZE="5"
+THIRD_PARTY_APPS_MAX_RETRY="3"
+MAX_CONCURRENT_THIRD_PARTY_APPS_SYNC="5"
 
 VERCEL_PREFERRED_REGION="fra1"
