chore(slack): update issue name format (#103)
## Description

This updates the Slack issue name format to `#channel - YYYY-MM-DD`

This also fix inngest version to 3.12.0

## Additional Notes

Add any other context or screenshots about the feature request here.

## Checklist:

Before you create this PR, confirm all the requirements listed below by
checking the checkboxes like this (`[x]`).

- [x] I have performed a self-review of my own code.
- [ ] I have commented my code, particularly in hard-to-understand
areas.
- [x] I have added tests to cover the new feature or fixes.

--- a/apps/github/.env.test
+++ b/apps/github/.env.test
@@ -27,3 +27,5 @@ THIRD_PARTY_APPS_MAX_RETRY="3"
 MAX_CONCURRENT_THIRD_PARTY_APPS_SYNC="5"
 
 VERCEL_PREFERRED_REGION="fra1"
+
+COMPOSE_PROJECT_NAME=github-test
