--- a/packages/inngest/package.json
+++ b/packages/inngest/package.json
@@ -14,10 +14,10 @@
     "@elba-security/tsconfig": "workspace:*",
     "@sentry/nextjs": "^7.88.0",
     "eslint": "^8",
-    "inngest": "^3.8.0"
+    "inngest": "3.12.0"
   },
   "peerDependencies": {
     "@sentry/nextjs": "^7.88.0",
-    "inngest": "3.x"
+    "inngest": "3.12.0"
   }
 }
