--- a/template/.env.test
+++ b/template/.env.test
@@ -11,3 +11,4 @@ POSTGRES_PASSWORD="postgre"
 POSTGRES_DATABASE="test"
 POSTGRES_PROXY_PORT="2345"
 VERCEL_PREFERRED_REGION="fra1"
+COMPOSE_PROJECT_NAME=saas-test
