--- a/apps/github/package.json
+++ b/apps/github/package.json
@@ -29,7 +29,7 @@
     "@sentry/nextjs": "^7.88.0",
     "@vercel/postgres": "^0.5.1",
     "drizzle-orm": "^0.29.1",
-    "inngest": "^3.8.0",
+    "inngest": "3.12.0",
     "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "postgres": "^3.4.3",
