--- a/apps/slack/package.json
+++ b/apps/slack/package.json
@@ -33,7 +33,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@vercel/postgres": "0.5.1",
     "drizzle-orm": "^0.29.1",
-    "inngest": "^3.7.0",
+    "inngest": "3.12.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
