--- a/template/package.json
+++ b/template/package.json
@@ -27,7 +27,7 @@
     "@sentry/nextjs": "^7.88.0",
     "@vercel/postgres": "0.5.1",
     "drizzle-orm": "^0.29.1",
-    "inngest": "^3.6.2",
+    "inngest": "3.12.0",
     "msw": "^2.0.1",
     "next": "14.0.1",
     "react": "^18",
