--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     image: postgres:latest
     container_name: "postgres-${COMPOSE_PROJECT_NAME}"
     environment:
-      POSTGRES_DB: ${POSTGRES_DATABASE}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${DATABASE_DATABASE}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${DATABASE_PORT}:5432"
   # remove the proxy service if your integration does not works with edge runtime
   pg_proxy:
     image: ghcr.io/neondatabase/wsproxy:latest
@@ -19,6 +19,6 @@ services:
       ALLOW_ADDR_REGEX: '.*'
       LOG_TRAFFIC: 'true'
     ports:
-      - '${POSTGRES_PROXY_PORT}:80'
+      - '${DATABASE_PROXY_PORT}:80'
     depends_on:
       - postgres
