--- a/apps/microsoft/package.json
+++ b/apps/microsoft/package.json
@@ -29,7 +29,7 @@
     "@vercel/postgres": "0.5.1",
     "date-fns": "^3.2.0",
     "drizzle-orm": "^0.29.1",
-    "inngest": "^3.6.2",
+    "inngest": "3.12.0",
     "msw": "^2.0.1",
     "next": "14.0.1",
     "react": "^18",
