--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
     "@elba-security/config": "workspace:*",
     "@elba-security/inngest": "workspace:*",
     "@elba-security/logger": "workspace:*",
+    "@elba-security/nextjs": "workspace:*",
     "@elba-security/sdk": "workspace:*",
     "@neondatabase/serverless": "0.6.0",
     "@sentry/nextjs": "^7.88.0",
