--- a/apps/dropbox/package.json
+++ b/apps/dropbox/package.json
@@ -28,7 +28,7 @@
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.29.1",
     "dropbox": "^10.34.0",
-    "inngest": "^3.13.0",
+    "inngest": "3.14.2",
     "next": "14.0.1",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
@@ -49,8 +49,6 @@
     "drizzle-kit": "^0.20.6",
     "eslint": "^8.53.0",
     "msw": "^2.0.1",
-    "ts-node": "^10.9.1",
-    "tsx": "^3.12.2",
     "typescript": "^5.2.2",
     "vitest": "^1.2.1"
   },
