--- a/apps/teams/.env.test
+++ b/apps/teams/.env.test
@@ -23,3 +23,11 @@ TOKEN_REFRESH_MAX_RETRY="3"
 USERS_SYNC_MAX_RETRY="3"
 USERS_SYNC_BATCH_SIZE="1"
 USERS_SYNC_CRON="TZ=Europe/Kiev * * * * *"
+TEAMS_SYNC_BATCH_SIZE="4"
+TEAMS_SYNC_MAX_RETRY="3"
+CHANNEL_SYNC_BATCH_SIZE="1"
+CHANNELS_SYNC_MAX_RETRY="3"
+MESSAGES_SYNC_BATCH_SIZE="6"
+MESSAGES_SYNC_MAX_RETRY="3"
+REPLIES_SYNC_MAX_RETRY="3"
+REPLIES_SYNC_BATCH_SIZE="2"
