feat(webhooks): initial MS teams webhook

--- a/apps/teams/.env.test
+++ b/apps/teams/.env.test
@@ -31,3 +31,5 @@ MESSAGES_SYNC_BATCH_SIZE="6"
 MESSAGES_SYNC_MAX_RETRY="3"
 REPLIES_SYNC_MAX_RETRY="3"
 REPLIES_SYNC_BATCH_SIZE="2"
+SUBSCRIBE_SYNC_MAX_RETRY="2"
+WEBHOOK_URL="https://foo.bar"
