--- a/template/package.json
+++ b/template/package.json
@@ -24,6 +24,7 @@
     "@elba-security/logger": "workspace:*",
     "@elba-security/nextjs": "workspace:*",
     "@elba-security/sdk": "workspace:*",
+    "@elba-security/utils": "workspace:*",
     "@neondatabase/serverless": "0.9.0",
     "@sentry/nextjs": "^7.88.0",
     "drizzle-orm": "^0.29.4",
