--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "devDependencies": {
     "@elba-security/tsconfig": "workspace:*",
-    "eslint": "^8.48.0",
+    "eslint": "^8.53.0",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.0.3",
     "turbo": "latest"
   },
@@ -20,5 +21,9 @@
     "pnpm": "8"
   },
   "name": "elba-security",
-  "packageManager": "pnpm@8.10.2"
+  "packageManager": "pnpm@8.10.2",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
+  }
 }
