chore: change webhooks to webhook

--- a/apps/teams/.env.test
+++ b/apps/teams/.env.test
@@ -34,4 +34,5 @@ SUBSCRIBE_SYNC_MAX_RETRY="2"
 WEBHOOK_URL="https://foo.bar"
 SUBSCRIBE_EXPIRATION_DAYS="3"
 REFRESH_DATA_PROTECTION_MAX_RETRY="3"
+DELETE_DATA_PROTECTION_MAX_RETRY="3"
 TEAMS_SYNC_CRON="TZ=Europe/Kiev 0 0 * * 0/14"
