chore: verify request from MS

--- a/apps/teams/.env.test
+++ b/apps/teams/.env.test
@@ -28,5 +28,6 @@ SUBSCRIBE_EXPIRATION_DAYS="3"
 REFRESH_DATA_PROTECTION_MAX_RETRY="3"
 DELETE_DATA_PROTECTION_MAX_RETRY="3"
 TEAMS_SYNC_CRON="TZ=Europe/Kiev 0 0 * * 0/14"
-MICROSOFT_WEBHOOK_SECRET_KEY="secret"
 REMOVE_ORGANISATION_MAX_RETRY=3
+MICROSOFT_WEBHOOK_PUBLIC_CERTIFICATE="base64-public-certificate"
+MICROSOFT_WEBHOOK_PUBLIC_CERTIFICATE_ID="certificateId"
