--- a/apps/teams/package.json
+++ b/apps/teams/package.json
@@ -11,7 +11,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "database:up": "docker-compose -p teams --profile edge --env-file=.env.local up -d",
-    "database:down": "docker-compose -p teams down --volumes",
+    "database:down": "docker-compose -p teams --env-file=.env.local down --volumes",
     "database:migrate": "drizzle-kit push:pg --config ../../drizzle.config.ts",
     "database:generate": "drizzle-kit generate:pg --config ../../drizzle.config.ts"
   },
@@ -27,6 +27,7 @@
     "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.1",
     "inngest": "3.14.2",
+    "jose": "^5.2.4",
     "msw": "^2.0.1",
     "next": "14.0.1",
     "react": "^18",
